[gd_scene load_steps=12 format=3 uid="uid://b7xf8ym1jksdh"]

[ext_resource type="Script" path="res://scenes/UI/Menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cd048hfdpvc0e" path="res://sprites/controls/logo_murio.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b26aok7hhi1jv" path="res://sprites/backgrounds/uncolored_piramids.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bqgq4hr0mjafd" path="res://sprites/controls/logo_murio_plain.png" id="4"]
[ext_resource type="FontFile" uid="uid://be4tfl1wryue8" path="res://fonts/ Kind and Rich - Personal Use.otf" id="5"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.2, 0.360784, 0.564706, 1)

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.576471, 0.709804, 0.882353, 1)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MenuScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.92041
offset_top = -0.330261
offset_right = -0.92041
offset_bottom = -0.330322
script = ExtResource("1")

[node name="uncolored_piramids" type="Sprite2D" parent="."]
position = Vector2(1024, 600)
scale = Vector2(2.0018, 1.17252)
texture = ExtResource("3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 0.323
anchor_bottom = 0.111
offset_left = -0.92041
offset_top = -0.332581
offset_right = 1385.58
offset_bottom = 596.467
use_top_left = true

[node name="logo_murio_plain" type="Sprite2D" parent="CenterContainer"]
position = Vector2(1040.53, 382.689)
scale = Vector2(0.587764, 0.568827)
texture = ExtResource("4")

[node name="logo_murio" type="Sprite2D" parent="."]
visible = false
position = Vector2(880.917, 318.633)
scale = Vector2(0.592199, 0.569751)
texture = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -495.5
offset_top = -470.333
offset_right = 495.5
offset_bottom = -125.333
theme_override_constants/separation = 26
alignment = 1

[node name="start_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("3")
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("1")
text = "Start"

[node name="settings_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = SubResource("4")
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("1")
text = "Settings"

[node name="exit_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_fonts/font = SubResource("5")
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("1")
text = "Exit"

[node name="version" type="Label" parent="."]
layout_mode = 0
offset_left = 1886.84
offset_top = 1157.04
offset_right = 2069.84
offset_bottom = 1222.04
theme_override_fonts/font = SubResource("6")
text = "Version 0.01
"

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
